--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -34,4 +34,6 @@
     <string name="dialog_yes">네</string>
     <string name="dialog_no">아니오</string>
 
+    <string name="double_back_press_message">뒤로 가기 버튼을 한 번 더 누르시면 종료됩니다.</string>
+
 </resources>
