--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -42,4 +42,10 @@
     <string name="dialog_yes">네</string>
     <string name="dialog_no">아니오</string>
 
+    <!-- home -->
+    <string name="home_profile_info_type_description">상태메시지</string>
+    <string name="home_profile_info_type_birth">선물하기</string>
+    <string name="home_birth">오늘 %d월 %d일</string>
+    <string name="home_music">%s-%s</string>
+
 </resources>
