[add] #11 친구 추가 다이얼로그 구현을 위한 스트링 리소스 추가

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -48,4 +48,8 @@
     <string name="home_birth">오늘 %d월 %d일</string>
     <string name="home_music">%s-%s</string>
 
+    <!-- add friend -->
+    <string name="add_friend">친구 추가</string>
+    <string name="add_friend_name_hint">이름을 입력해주세요.</string>
+
 </resources>
