--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -36,20 +36,26 @@
     <!-- my page -->
     <string name="my_page">MY PAGE</string>
 
-    <!-- logout -->
-    <string name="logout">로그아웃</string>
-    <string name="logout_dialog_context">정말로 로그아웃 하실건가요?</string>
-    <string name="dialog_yes">네</string>
-    <string name="dialog_no">아니오</string>
-
     <!-- home -->
     <string name="home_profile_info_type_description">상태메시지</string>
     <string name="home_profile_info_type_birth">선물하기</string>
     <string name="home_birth">오늘 %d월 %d일</string>
     <string name="home_music">%s-%s</string>
 
+    <!-- dialog -->
+    <string name="dialog_yes">네</string>
+    <string name="dialog_no">아니오</string>
+
+    <!-- logout -->
+    <string name="logout">로그아웃</string>
+    <string name="logout_dialog_context">정말로 로그아웃 하실건가요?</string>
+
     <!-- add friend -->
     <string name="add_friend">친구 추가</string>
     <string name="add_friend_name_hint">이름을 입력해주세요.</string>
+
+    <!-- delete friend -->
+    <string name="delete_friend">친구 삭제</string>
+    <string name="delete_friend_context">정말로 삭제 하시겠습니까?</string>
 
 </resources>
